# Cot-ExplorerV2

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODOS.md  alembic.ini  build_combined.py  build_price_history.py  build_timeseries.py  docker-compose.yml  fetch_agri.py  fetch_all.py  fetch_calendar.py  fetch_comex.py  fetch_cot.py  fetch_crypto.py  fetch_energy_infra.py  fetch_fundamentals.py  fetch_intel.py  fetch_oilgas.py  fetch_prices.py  fetch_seismic.py  fetch_shipping.py  package.json  push_signals.py  pyproject.toml  requirements.txt  smc.py  update.sh
.claude/: settings.json
.claude/agents/: api-reviewer.md  qa-engineer.md  (+13 more)
agents/: _schema.json  _template.md
alembic/: env.py
config/: instruments.yaml  scoring.yaml  transaction_costs.yaml
docs/: GSTACK-DEEP-REVIEW-PROMPT.md  SESSION-7-OVERNIGHT-SPRINT.md  SESSION-7-RESULTS.md  SESSION-8-RESULTS.md  agent-development-guide.md  api-reference.md  architecture.md  backtesting-guide.md  competitor-analysis.md  configuration.md  consolidation-plan.md  data-sources.md  database-schema.md  deployment.md  known-issues-rc1.md  security-testing-guide.md  trading-strategy-guide.md  troubleshooting.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
scripts/: cot-explorer.service  crontab.example  diag_cot_momentum.py  diag_macro_regime.py  diag_smc_confluence.py  migrate_v1_data.py  populate_db.py  rpi-setup.sh  run_wfo.py  session-catchup.sh  validate_pine.py
src/: __init__.py
tests/: conftest.py
(+700 files in other folders)
